css/style0.css
/* GLOBAL STYLES + MOBILE STYLES */

body {
  margin: 0;
  font-family: "Public Sans", "DM Serif Display";
  /* background-color: hsl(207, 16%, 50%); */
  /* background-color: rgb(108, 130, 148); */
  background-color: #EDF3F8;
  text-align: center;
  /* background-color: #36536B; */
  /* background-color: #6c8294; */
  /* z-index: 5; */
}

h2 {
  font-size: 1.7em;
  color: #36536B;
  /* text-align: center; */
}

#h3-pink {
  color: #BA4270;
}

#phone {
  z-index: 3;
}

/* p {
  color: #36536B;
} */

p, a {
  color: #6c8294;
}

#p-white {
  color: white;
  opacity: 70%;
}

#contact-companies h3 {
  color: #36536B;
  opacity: 75%;
}
  /* a {
    color: #36536B;
  } */

/* below: color of semi circle... */
/* background-color: hsl(0%, 0%, 92%); */


/* place on right side... */

.dot1 {
  position: absolute;
  height: 75em;
  width: 75em;
  /* top: 50%;
  right: -50%; */
  /* text-align: center; */
  background-color: #36536B;
  opacity: 15%;
  border-radius: 50%;
  /* display: inline-block; */
  /* transform: translateX(100vw); */
  /* text-align: center; */
  transform: translate(-50%, -85%);
  z-index: 1;
}

/* fix error with covering first part of page... */

.dot2 {
  position: absolute;
  /* height: 75em;
  width: 75em; */
  height: 20em;
  width: 40em;
  background-color: #36536B;
  opacity: 15%;
  border-radius: 0% 0% 50% 50%;
  transform: translate(-50%, 188%);
  /* transform: rotate(180deg); */
  z-index: 1;
}

.dot3 {
  position: absolute;
  /* bottom: 1000px; */
  left: 50%;
  height: 20em;
  width: 40em;
  /* top: 50%;
  right: -50%; */
  /* text-align: center; */
  background-color: #36536B;
  opacity: 15%;
  border-radius: 50% 50% 0% 0%;
  /* display: inline-block; */
  /* transform: translateX(100vw); */
  /* text-align: center; */
  transform: translate(-50%, 1415%);
  z-index: 1;
}

header nav {
  /* display: none; */
  display: flex;
  flex-direction: column;

  position: fixed;
  width: 100%;
  padding-top: 15em;
  top: 0px;
  transform: translateX(100vw);
  transition: 0.5s;
}

header nav.open {
  /* display: flex; */
  transform: translateX(0);
}

#logo {
  /* padding-top: 1em;
  padding-right: 12em; */
  position: fixed;
  /* top: 5em; */
  left: 20px;
  top: 20px;
  z-index: 5;
}

#menuToggler {
  position: fixed;
  right: 20px;
  top: 30px;
  z-index: 5;
  /* padding-right: 1em;
  padding-top: 1em; */
}

/* reset nav... */

#menu {
  background-color: #1B262F;
  z-index: 4;
}

nav {
  position: fixed;
  top: 0;
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  /* opacity: 0; */
  transform: translateX(100vw);
  transition: 0.5s;
}

nav.open {
  transform: none;
  opacity: 1;
}

/* font-size not for button... */
nav a:nth-child(-n+3) {
  /* color: white; */
  color: rgba(255, 255, 255, 1)
  /* color: rgba(251, 252, 254, 0.2)   */
  font-size: 1.2em;
  text-decoration: none;
  padding: 1.5em 1em;
  text-align: center;
}

nav a:first-child {
  border-top: 1px solid rgba(251, 252, 254, 0.25);
  padding-top: 2em;
  margin-top: 5em;
}

nav.open a:first-child {
  margin-top: 5em;
  margin-right: 2em;
  margin-left: 2em;
  padding-top: 2em;
  /* border-top: 1px solid #36536B; */
  border-top: 1px solid rgba(251, 252, 254, 0.25);
  /* #FBFCFE */
  /* border-top: 1px solid grey; */
}

/* #menuToggler { */
  /* font-size: 500%; */
  /* font-stretch: expanded; */
  /* width: 100%; */
  /* position: fixed;
  top: 10px;
  right: 20px;
  z-index: 1;
  font-size: 4em; */
  /* text-align: right; */
  /* color: #36536B;
} */

#menu {
  /* background-color: #1B262F;
  height: 100%;
  z-index: 1; */
}

header {
  /* margin: 2.5em 1.5em; */
}

/*
header nav {
  display: flex;
  justify-content: space-between;
  margin: 2.5em 1.5em;
}

header nav ul {
  display: none;
  list-style-type: none;
} */

form ul li:nth-child(1) {
  color: red;
  opacity: 50%;
  border-bottom: 1px solid grey;
  padding-bottom: 1em;
  list-style-type: none;
}

form fieldset {
  display: flex;
  flex-direction: column;
  opacity: 50%;
  border: none;
}

form fieldset input {
  border: none;
  border-bottom: 1px solid grey;
  background-color: #EDF3F8;
  padding-bottom: 1.5em;
  padding-top: 1.5em;
  color: #36536B;
}

form fieldset input:last-child {
  padding-bottom: 4.5em;
}

main {
  display: flex;
  flex-direction: column;
}

section ul {
  padding-top: 2em;
  padding-bottom: 2em;
  list-style-type: none;
  border-bottom: 1px solid rgba(54, 83, 107, .25);
  border-top: 1px solid rgba(54, 83, 107, .25);
  display: flex;
  flex-direction: column;
  display: inline;
}

section ul li img {
  /* display: inline; */
  height: 5vh;
}

h3 {
  color: #36536B;
}

#price {
  color: #36536B;
  font-size: 4em;
  /* border-bottom: 1px solid rgba(54, 83, 107, .25); */
}

#untick {
  opacity: 50%;
}

/* #free-plan li:nth-child(7) {

} */
/* ... */

